--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "@types/node": "^12.20.1",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.1",
+        "lodash": "^4.17.21",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
         "react-scripts": "4.0.2",
+        "redux-thunk": "^2.3.0",
         "typescript": "^4.1.5",
         "web-vitals": "^1.1.0"
     },
@@ -41,6 +44,8 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.168",
+        "@types/react-redux": "^7.1.16",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
         "@typescript-eslint/parser": "^4.15.2",
         "babel-plugin-import": "^1.13.3",
@@ -52,6 +57,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "less": "^4.1.1",
         "less-loader": "^7.3.0",
-        "react-app-rewired": "^2.1.8"
+        "react-app-rewired": "^2.1.8",
+        "redux-devtools-extension": "^2.13.8"
     }
 }
