--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lodash": "^4.17.21",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-icons": "^4.2.0",
         "react-redux": "^7.2.2",
         "react-scripts": "4.0.2",
         "redux-thunk": "^2.3.0",
