--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.3",
         "@monaco-editor/react": "^4.0.11",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -18,11 +17,12 @@
         "react-dom": "^17.0.1",
         "react-flow-renderer": "^9.1.1",
         "react-icons": "^4.2.0",
-        "react-modal": "^3.12.1",
         "react-redux": "^7.2.2",
         "react-scripts": "4.0.2",
-        "react-select": "^4.2.1",
         "redux-thunk": "^2.3.0",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-less": "^2.4.1",
+        "semantic-ui-react": "^2.0.3",
         "typescript": "^4.1.5",
         "web-vitals": "^1.1.0"
     },
@@ -52,9 +52,7 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.168",
-        "@types/react-modal": "^3.12.0",
         "@types/react-redux": "^7.1.16",
-        "@types/react-select": "^4.0.13",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
         "@typescript-eslint/parser": "^4.15.2",
         "babel-plugin-import": "^1.13.3",
