--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "lodash": "^4.17.21",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-flow-renderer": "^9.1.1",
+        "react-flow-renderer": "8.0.0",
         "react-icons": "^4.2.0",
         "react-redux": "^7.2.2",
         "react-scripts": "4.0.2",
