--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
         "web-vitals": "^1.1.0"
     },
     "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-scripts eject",
         "bootstrap": "npm install",
+        "build": "react-app-rewired build",
+        "eject": "react-scripts eject",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-        "lint:ci": "eslint -c .eslintrc.js $(git diff --diff-filter=d --name-only | grep -E \"(.js$|.ts$|.jsx$|.tsx$)\")"
+        "lint:ci": "eslint -c .eslintrc.js $(git diff --diff-filter=d --name-only | grep -E \"(.js$|.ts$|.jsx$|.tsx$)\")",
+        "start": "react-app-rewired start",
+        "test": "react-app-rewired test"
     },
     "eslintConfig": {
         "extends": [
