--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "build": "react-app-rewired build",
         "eject": "react-scripts eject",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-        "lint:ci": "eslint -c .eslintrc.js $(git diff --name-only origin/main | grep -E \"(.js$|.ts$|.jsx$|.tsx$)\")",
+        "lint:ci": "eslint $(git diff --name-only --diff-filter=ACMR origin/main... | grep '^.*[.js,.jsx]$')",
         "start": "react-app-rewired start",
         "test": "react-app-rewired test"
     },
