--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "repository": "https://github.com/wso2-incubator/identity-authentication-flow-composer",
     "license": "Apache-2.0",
     "dependencies": {
+        "@asgardeo/auth-react": "^1.1.23",
         "@monaco-editor/react": "^4.0.11",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -22,6 +23,7 @@
         "react-flow-renderer": "8.0.0",
         "react-icons": "^4.2.0",
         "react-redux": "^7.2.2",
+        "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
@@ -69,6 +71,8 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.0",
         "process": "^0.11.10",
         "react-app-rewired": "^2.1.8",
         "redux-devtools-extension": "^2.13.8",
